--- a/FastAPI/requirements.txt
+++ b/FastAPI/requirements.txt
@@ -1,7 +1,14 @@
 aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiomysql==0.2.0
+aiopg==1.4.0
+aiosignal==1.3.2
 aiosqlite==0.21.0
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==4.0.3
+attrs==25.3.0
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -12,6 +19,7 @@ Faker==37.1.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
 Flask==3.1.0
+frozenlist==1.6.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
@@ -23,9 +31,13 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+multidict==6.4.3
+propcache==0.3.1
+psycopg2-binary==2.9.10
 pydantic==2.11.1
 pydantic_core==2.33.0
 Pygments==2.19.1
+PyMySQL==1.1.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
@@ -46,3 +58,4 @@ uvicorn==0.34.0
 watchfiles==1.0.4
 websockets==15.0.1
 Werkzeug==3.1.3
+yarl==1.20.0
