--- a/FastAPI/.env.example
+++ b/FastAPI/.env.example
@@ -11,3 +11,6 @@ POSTGRES_HOST="127.0.0.1"
 POSTGRES_PORT=5432
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgres"
+
+# https://openweathermap.org/api
+OPENWEATHERMAP_API_KEY=
