--- a/FastAPI/requirements.txt
+++ b/FastAPI/requirements.txt
@@ -9,44 +9,75 @@ annotated-types==0.7.0
 anyio==4.9.0
 async-timeout==4.0.3
 attrs==25.3.0
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
 blinker==1.9.0
+cachetools==6.1.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+cssselect==1.3.0
+cssutils==2.11.1
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 Faker==37.1.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+filetype==1.2.0
 Flask==3.1.0
 frozenlist==1.6.0
 greenlet==3.1.1
 h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
+Hypercorn==0.17.3
+hyperframe==6.1.0
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+more-itertools==10.7.0
 multidict==6.4.3
+mypy==1.17.0
+mypy_extensions==1.1.0
+packaging==25.0
+passlib==1.7.4
+pathspec==0.12.1
+pillow==11.3.0
+pluggy==1.5.0
+premailer==3.10.0
+priority==2.0.0
 propcache==0.3.1
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pydantic==2.11.1
 pydantic_core==2.33.0
 Pygments==2.19.1
+PyJWT==2.10.1
 PyMySQL==1.1.1
+pytest==8.3.5
+pytest-asyncio==0.26.0
 python-dotenv==1.1.0
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 requests==2.32.3
 rich==14.0.0
 rich-toolkit==0.14.1
+rsa==4.9.1
 ruff==0.11.2
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 SQLAlchemy==2.0.40
 starlette==0.46.1
 typer==0.15.2
@@ -58,4 +89,6 @@ uvicorn==0.34.0
 watchfiles==1.0.4
 websockets==15.0.1
 Werkzeug==3.1.3
+wsproto==1.2.0
+yagmail==0.15.293
 yarl==1.20.0
